...
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOw-Jr-u0b" customClass="DesignableButton" customModule="Spring">
                                <rect key="frame" x="16" y="228.5" width="216" height="38.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Translate">
                                    <color key="titleColor" red="0.33333333333333331" green="0.59999999999999998" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                        <color key="value" red="0.33333333333333331" green="0.59999999999999998" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </userDefinedRuntimeAttribute>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsu-2b-QO0">
                                <rect key="frame" x="59" y="175.5" width="43.5" height="43"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Qsu-2b-QO0" secondAttribute="height" multiplier="1:1" id="zNM-Hf-8ur"/>
                                </constraints>
                                <state key="normal" image="reverse"/>
                                <connections>
                                    <action selector="reverseLanguage:" destination="nRG-xP-pY0" eventType="touchUpInside" id="Ua9-i9-qVu"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kor-a8-FVo">
                                <rect key="frame" x="255" y="181.5" width="51" height="31"/>
...
                                        <color key="value" red="0.33333333329999998" green="0.59999999999999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3o-z2-tLg" customClass="DesignableButton" customModule="Spring">
                                <rect key="frame" x="246" y="229" width="57.5" height="38.5"/>
                                <state key="normal" image="copy"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                        <color key="value" red="0.33333333329999998" green="0.59999999999999998" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                        <real key="value" value="1"/>
...
