...
            </objects>
            <point key="canvasLocation" x="-33" y="-296"/>
        </scene>
        <!--Weather-->
        <scene sceneID="rsf-CI-0B7">
            <objects>
                <viewControllerPlaceholder storyboardName="Weather" id="9hl-4m-S21" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" systemItem="more" id="nBf-MP-S7a"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1kl-uD-xLb" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="669" y="-157"/>
        </scene>
...
