...
        self.present(alertVC, animated: true, completion: nil)
    }
    
    /// Show a popup if the initial text is empty
    func textEmptyPopUp() {
        let alertVC = UIAlertController(title: "", message: "Veuillez saisir un texte", preferredStyle: .alert)
        alertVC.addAction(UIAlertAction(title: "Ok", style: .cancel, handler: nil))
        
        self.present(alertVC, animated: true, completion: nil)
    }
    
}

...
